* Ingo broke binary compatibility of Window.h in r18649, thanks to Stefano   for finding this. This should fix bug #1734. * Removed unused BWindow members and the temporary PrintToStream() method. * Indentation cleanup (DirectWindow.h had some spaces instead of tabs).

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@23863 a95241bf-73f2-0310-859d-f6bbb57e9c96